--- a/scoreboard.html
+++ b/scoreboard.html
@@ -55,7 +55,6 @@
             text-align: center;
         }
 
-        /* Header & Nav */
         header {
             margin-bottom: 40px;
             border-bottom: 2px solid var(--neon-purple);
@@ -104,30 +103,31 @@
             color: var(--bg-color);
             box-shadow: 0 0 15px var(--neon-blue);
         }
-        
-        /* Scoreboard Specific Styles */
+
+        .active-btn {
+            border-color: var(--neon-pink);
+            color: var(--neon-pink);
+        }
+
         .scoreboard-container {
             border: 4px solid var(--terminal-green);
             background-color: rgba(0, 0, 0, 0.8);
             box-shadow: 0 0 30px var(--terminal-green);
-            padding: 5px; /* Less padding to maximize iframe space */
+            padding: 5px;
             border-radius: 8px;
-            overflow: hidden; /* Hide iframe scrollbars if possible */
-            /* Set a fixed height for the scoreboard area */
-            height: 70vh; 
-            min-height: 400px; 
+            overflow: hidden;
+            height: 210vh;
+            min-height: 1200px;
             max-width: 100%;
         }
 
-        /* Styling for the embedded Google Sheet iframe */
         #google-sheet-iframe {
             width: 100%;
             height: 100%;
             border: none;
-            background-color: #000; /* Ensure black background if sheet loads slowly */
+            background-color: #000;
         }
-        
-        /* Status Message - now used for instruction */
+
         #status-message {
             margin-top: 20px;
             font-size: 0.9rem;
@@ -137,8 +137,8 @@
         @media (max-width: 600px) {
             h1 { font-size: 1.5rem; }
             .subtitle { font-size: 0.9rem; }
-            .nav-btn { width: 100%; margin-bottom: 5px;}
-            .scoreboard-container { height: 60vh; }
+            .nav-btn { width: 100%; margin-bottom: 5px; }
+            .scoreboard-container { height: 160vh; min-height: 900px; }
         }
     </style>
 </head>
@@ -153,32 +153,29 @@
 
         <nav>
             <a href="index.html" class="nav-btn">Home</a>
-            <a href="scoreboard.html" class="nav-btn" style="border-color: var(--neon-pink); color: var(--neon-pink);">Scoreboard</a>
-            <a href="https://www.gentingskyworlds.com/en/rules-regulations.html" target="_blank" class="nav-btn">Game Rules</a>
-            <a href="#" class="nav-btn">Prize Pools</a>
-            <a href="#" class="nav-btn">Secret Santa</a>
-            <a href="#" class="nav-btn">Others</a>
+            <a href="scoreboard.html" class="nav-btn active-btn">Scoreboard</a>
+            <a href="gamerules.html" class="nav-btn">Game Rules</a>
+            <a href="themepark.html" class="nav-btn">Theme Park</a>
+            <a href="prize.html" class="nav-btn">Prize Pools</a>
+            <a href="wish.html" class="nav-btn">Secret Santa</a>
+            <a href="others.html" class="nav-btn">Others</a>
         </nav>
     </header>
 
     <div class="scoreboard-container">
-        <!-- 
-            Embedding the published Google Sheet HTML view directly. 
-            The sheet will handle its own updates automatically.
-        -->
         <iframe 
             id="google-sheet-iframe" 
             src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShFGBBJoJcmTZjGvN4T6nWve1VocnyENukSihj5LnlZMm3PU5s4eKLmE3uW07YJG7Det1LErGrAPUz/pubhtml?gid=1037652140&single=true&widget=true&headers=false"
-            frameborder="0"
-        ></iframe>
+            frameborder="0">
+        </iframe>
     </div>
+
     <div id="status-message">
         Note: This is the live embedded Google Sheet. Updates made in the sheet will reflect here automatically.
     </div>
 </div>
 
 <script>
-    // No JavaScript needed for fetching! The iframe handles the display and refresh.
     console.log("Scoreboard loaded using iframe embedding.");
 </script>
 
