--- a/gamerules.html
+++ b/gamerules.html
@@ -121,7 +121,6 @@
         }
 
         .rule-button {
-            /* Inherits some styles from .nav-btn for look, but customized */
             width: 100%;
             max-width: 400px;
             background: var(--bg-color);
@@ -174,36 +173,38 @@
         <nav>
             <a href="index.html" class="nav-btn">Home</a>
             <a href="scoreboard.html" class="nav-btn">Scoreboard</a>
-            <!-- Highlighted link for the current page -->
-            <a href="gamerules.html" class="nav-btn" style="border-color: var(--neon-pink); color: var(--neon-pink);">Game Rules</a>
-            <a href="#" class="nav-btn">Prize Pools</a>
-            <a href="#" class="nav-btn">Secret Santa</a>
-            <a href="#" class="nav-btn">Others</a>
+
+            <!-- CURRENT PAGE HIGHLIGHTED -->
+            <a href="gamerules.html" class="nav-btn" style="border-color: var(--neon-pink); color: var(--neon-pink);">
+                Game Rules
+            </a>
+
+            <!-- NEW BUTTON ADDED -->
+            <a href="themepark.html" class="nav-btn">Theme Park</a>
+
+            <!-- REST OF THE PAGES -->
+            <a href="prize.html" class="nav-btn">Prize Pools</a>
+            <a href="wish.html" class="nav-btn">Secret Santa</a>
+            <a href="others.html" class="nav-btn">Others</a>
         </nav>
     </header>
 
     <div class="rules-content">
-        <!-- Button 1: Normal Game Rules - Path updated to Rules/Normal.pdf -->
         <a href="Rules/Normal.pdf" target="_blank" class="rule-button">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14 2H6C4.89543 2 4 2.89543 4 4V20C4 21.1046 4.89543 22 6 22H18C19.1046 22 20 21.1046 20 20V8L14 2ZM18 20H6V4H13V9H18V20ZM10 12V14H14V12H10ZM10 15V17H14V15H10Z"></path></svg>
             Game Rules (Standard Operation)
         </a>
         
-        <!-- Button 2: Rain Game Rules - Path updated to Rules/Rain.pdf -->
         <a href="Rules/Rain.pdf" target="_blank" class="rule-button">
-             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM12 7V13L16.2803 15.6499L17.0303 14.3501L13 11.8333V7H12Z"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM12 7V13L16.2803 15.6499L17.0303 14.3501L13 11.8333V7H12Z"></path></svg>
             Game Rules (IF RAIN Protocol)
         </a>
 
         <p id="status-message">
-            The PDFs will open in a new tab. Ensure the 'Rules' folder with the files 'Normal.pdf' and 'Rain.pdf' is accessible.
+            The PDFs will open in a new tab. Ensure the 'Rules' folder with 'Normal.pdf' and 'Rain.pdf' exists.
         </p>
     </div>
 </div>
-
-<script>
-    // No JavaScript needed
-</script>
 
 </body>
 </html>
