--- a/index.html
+++ b/index.html
@@ -319,9 +319,34 @@
 </div>
 
 <script>
+    // ---------- API section (REPLACED) ----------
+    // Primary API split parts (unchanged)
     const API_A = "AIzaSyADV6D3Lzl5piE";
-    const API_B = "MdcTg2dcj30H-A-rEyP8"; 
-    const API_KEY = API_A + API_B;
+    const API_B = "MdcTg2dcj30H-A-rEyP8";
+
+    // Backup API split parts (new)
+    const API_A2 = "AIzaSyAp2sKOhs9R7HE";
+    const API_B2 = "aA1xHMwq--_S2aFdvf2c";
+
+    function getPrimaryKey() {
+        return API_A + API_B;
+    }
+
+    function getBackupKey() {
+        return API_A2 + API_B2;
+    }
+
+    async function callGeminiWithKey(apiKey, prompt) {
+        // returns the fetch Response object (so caller can inspect .ok, status, etc.)
+        return fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+                contents: [{ parts: [{ text: prompt }] }]
+            })
+        });
+    }
+    // ---------- end API section ----------
 
     const chatDisplay = document.getElementById('chat-display');
     const userInput = document.getElementById('user-input');
@@ -339,7 +364,7 @@
     LOGISTICS RULES (DAY 1 - 11/12/2025):
     - 7:00 AM: Gather at Office Loading Bay.
     - CARS: Load backpacks + Secret Santa gifts into Mr. Kelvin's car. 
-    - LUGGAGE RULE: Luggage should have been put in Ying's car on 10/12/2025. Ying's car isn't at office on 11/12.
+    - LUGGAGE RULE: Luggage should have been put in Ying's car on 9/12/2025. Ying's car isn't at office on 11/12.
     - BACKPACK RULE: Once loaded in car, NO ACCESS until 5:00 PM (Hotel Check-in).
     - 7:30 AM: Depart.
     - 9:00 AM: Arrive First World Lobby. Walk to Theme Park.
@@ -377,6 +402,7 @@
         }
     }
 
+    // ---------- sendMessage() replaced to use primary + backup keys ----------
     async function sendMessage() {
         const text = userInput.value.trim();
         if (!text) return;
@@ -404,18 +430,32 @@
         chatDisplay.scrollTop = chatDisplay.scrollHeight;
 
         try {
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${API_KEY}`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({
-                    contents: [{ parts: [{ text: prompt }] }]
-                })
-            });
+            // Try primary key first
+            let response = await callGeminiWithKey(getPrimaryKey(), prompt);
+
+            // If primary fails (network ok but non-2xx OR returned JSON contains error),
+            // attempt backup. We'll attempt backup on either non-ok response or response JSON has .error.
+            let data;
+            try {
+                data = await response.clone().json();
+            } catch (e) {
+                // invalid JSON or no body; treat as failure
+                data = null;
+            }
+
+            if (!response.ok || (data && data.error)) {
+                console.warn("Primary API failed or returned error; attempting backup API key...");
+                // attempt backup
+                response = await callGeminiWithKey(getBackupKey(), prompt);
+                try {
+                    data = await response.json();
+                } catch (e) {
+                    data = null;
+                }
+            }
 
             const loadingMsg = document.getElementById('loading-msg');
             if (loadingMsg) loadingMsg.remove();
-
-            const data = await response.json();
 
             if (data?.candidates?.[0]?.content) {
                 const reply = data.candidates[0].content.parts[0].text;
@@ -424,11 +464,13 @@
                 appendMessage("SYSTEM ERROR: Mainframe overheating. Try again later.", 'bot-msg');
             }
         } catch (error) {
+            // Network or unexpected error for both tries
             const loadingMsg = document.getElementById('loading-msg');
             if (loadingMsg) loadingMsg.remove();
             appendMessage("SYSTEM ALERT: Pixel meltdown detected. Try again later.", 'bot-msg');
         }
     }
+    // ---------- end sendMessage replacement ----------
 
     function appendMessage(text, className) {
         const msgDiv = document.createElement('div');
