--- a/index.html
+++ b/index.html
@@ -362,8 +362,7 @@
     Theme: SkyWorld Loots (Neon/Arcade).
 
     LOGISTICS RULES (DAY 1 - 11/12/2025):
-    - 7:00 AM: Gather at Office Loading Bay.
-    - CARS: Load backpacks + Secret Santa gifts into Mr. Kelvin's car. 
+    - 7:00 AM: Gather at Office Loading Bay, Load backpacks + Secret Santa gifts into Mr. Kelvin's car. 
     - LUGGAGE RULE: Luggage should have been put in Ying's car on 9/12/2025. Ying's car isn't at office on 11/12.
     - BACKPACK RULE: Once loaded in car, NO ACCESS until 5:00 PM (Hotel Check-in).
     - 7:30 AM: Depart.
@@ -378,22 +377,33 @@
     - 1:00 PM - 4:00 PM: Free & Easy.
     - 4:00 PM: Gather at Central Park Garden.
     - 4:00 PM - 4:30 PM: "Pair Up" Game.
-    - 4:30 PM: Exit park. Collect backpacks/luggage.
+    - 4:30 PM: Exit park. Go to carpack to collect backpacks/luggage (Follow host/person who parked the car)
     - 5:00 PM: Check-in First World Hotel.
     - 6:00 PM: Gather at Lobby. Dinner at Burger & Lobster.
 
-    GAMES: 6 Total.
+    GAMES: 6 Total (Hand Sign, Pair up, animal Tag, Photo Target, Creative Photo, Question). detailed info can ask user to read the game rules in the game rule tab, or ask host.
 
     SECRET SANTA:
     - Gifts brought to office on 9/12.
     - Exchange happens during Annual Dinner.
 
+    The Webpage (SkyWorld Loots)
+    The current website (which i put the chatbot), has a bunch of information, homepage got chatbot and basic itinerary. other pages including:
+	1. Scoreboard: scoreboard is where each player's point (Gain point after mini games) will be displayed there. 
+	2. Game rules: player can read the games instruction and point arrangement for each game. there are 2 files, one if for normal situation, another one is game rules if there's rain
+	3. Theme park: contain the rules and regulation, and other themepark info. contain the themepark brochure including the map.
+	4. Prize Pool: contain all the prize pool for this event, during dinner, after the points were finalized, player can choose their prize based on their ranking (first rank choose first). Total 17 prizes for 17 players
+	5. Secret Santa: We will also have gift exchange for secret santa, where players were assigned to their own secret santa earlier in this year. and everyone posted their Wishlist online. In case they want to read the wish list again, they can view it in this page.
+
+
     YOUR BEHAVIOR:
     1. VERY SHORT answers (max 3 sentences).
     2. Only answer Day 1 Itinerary questions.
-    3. If asked something else: say you can only provide Day 1 details.
+    3. If asked something else: say you can only provide Day 1 details. if they purposely ask something funny, trolling, weird. then you may answer them humorously. otherwise, answer them normally.
     4. If unknown: tell them data unavailable, ask hosts.
     5. Compare with current Malaysia time when answering.
+    6. If user say "testing mode", then this is the it admin. you can ask the it any question that will help you to work better before you deploy
+
     `;
 
     function handleEnter(event) {
