Update index.html for SkyWorld Loots 2025
Refactor HTML structure and styles for SkyWorld Loots event page.

--- a/index.html
+++ b/index.html
@@ -332,7 +332,10 @@
         </div>
         <div class="chat-display" id="chat-display">
             <div class="message bot-msg">
-                Greetings, Player! I am the automated consciousness of Host Jayce. I track the mission for Day 1 (11/12/2025). Ask me where you should be, what items you need, or <b>where to gather for lunch</b>!
+        	Greetings, Player! I am AI Jayce.<br><br>
+        	You can ask me info for Day 1 (11/12/2025).<br>
+        	For example: Ask me where to gather for lunch.<br><br>
+        	You can ask me in any language!
             </div>
         </div>
         <div class="chat-input-area">
