--- a/themepark.html
+++ b/themepark.html
@@ -6,6 +6,8 @@
     <title>THEME PARK INFO | SKYWORLD</title>
     <!-- Google Fonts for Retro Arcade Look -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Three.js Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     
     <style>
         :root {
@@ -29,11 +31,32 @@
             color: var(--text-color);
             font-family: 'Orbitron', sans-serif;
             overflow-x: hidden;
+            min-height: 100vh;
+        }
+
+        /* Background grid effect */
+        .bg-grid {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background-image: 
                 linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
                 linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
             background-size: 100% 2px, 3px 100%;
-            min-height: 100vh;
+            z-index: -1;
+        }
+
+        /* 3D Canvas Layer */
+        #canvas-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+            opacity: 0.6;
         }
 
         /* Scanline Effect */
@@ -54,6 +77,8 @@
             margin: 0 auto;
             padding: 20px;
             text-align: center;
+            position: relative;
+            z-index: 10;
         }
 
         /* Header & Nav */
@@ -62,11 +87,13 @@
             border-bottom: 2px solid var(--neon-purple);
             padding-bottom: 20px;
             box-shadow: 0 0 15px var(--neon-purple);
+            background: rgba(5, 5, 5, 0.85); /* Dark background for readability */
+            padding-top: 20px;
         }
 
         h1 {
             font-family: 'Press Start 2P', cursive;
-            color: var(--terminal-green); /* Using green for visibility */
+            color: var(--terminal-green); 
             text-shadow: 2px 2px var(--neon-blue), 0 0 20px var(--terminal-green);
             font-size: 2.5rem;
             margin-bottom: 10px;
@@ -89,7 +116,7 @@
         }
 
         .nav-btn {
-            background: transparent;
+            background: rgba(0,0,0,0.8);
             border: 2px solid var(--neon-blue);
             color: var(--neon-blue);
             padding: 10px 20px;
@@ -113,9 +140,10 @@
             padding: 30px;
             margin: 40px auto;
             max-width: 800px;
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: rgba(0, 0, 0, 0.7); /* Transparent to see 3D bg */
             box-shadow: 0 0 20px var(--neon-blue);
             border-radius: 8px;
+            backdrop-filter: blur(5px); /* Cool blur effect */
         }
 
         .info-title {
@@ -134,7 +162,7 @@
 
         .action-link {
             display: block;
-            background: var(--neon-pink);
+            background: rgba(255, 0, 255, 0.8);
             color: var(--bg-color);
             border: 2px solid var(--neon-pink);
             padding: 20px;
@@ -159,8 +187,8 @@
             font-size: 0.9rem;
             border: 1px dashed var(--neon-purple);
             padding: 15px;
+            background: rgba(0,0,0,0.5);
         }
-
 
         @media (max-width: 600px) {
             h1 { font-size: 1.5rem; }
@@ -173,7 +201,9 @@
 </head>
 <body>
 
+<div class="bg-grid"></div>
 <div class="scanlines"></div>
+<div id="canvas-container"></div>
 
 <div class="container">
     <header>
@@ -184,7 +214,7 @@
             <a href="index.html" class="nav-btn">Home</a>
             <a href="scoreboard.html" class="nav-btn">Scoreboard</a>
             <a href="gamerules.html" class="nav-btn">Game Rules</a>
-            <a href="themepark.html" class="nav-btn" style="border-color: var(--neon-purple); color: var(--neon-purple);">Theme Park</a>
+            <a href="themepark.html" class="nav-btn" style="border-color: var(--neon-purple); color: var(--neon-purple); box-shadow: 0 0 10px var(--neon-purple);">Theme Park</a>
             <a href="prize.html" class="nav-btn">Prize Pools</a>
             <a href="wish.html" class="nav-btn">Secret Santa</a>
             <a href="others.html" class="nav-btn">Others</a>
@@ -212,6 +242,127 @@
         </div>
     </div>
 </div>
+
+<script>
+    // --- 3D NEURAL NETWORK VISUALIZATION (Three.js) ---
+    const initThreeJS = () => {
+        const container = document.getElementById('canvas-container');
+        const scene = new THREE.Scene();
+        scene.fog = new THREE.FogExp2(0x050505, 0.002);
+
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 50;
+
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        container.appendChild(renderer.domElement);
+
+        // CREATE PARTICLES
+        const geometry = new THREE.BufferGeometry();
+        const particleCount = 200; 
+        const posArray = new Float32Array(particleCount * 3);
+
+        for(let i = 0; i < particleCount * 3; i++) {
+            posArray[i] = (Math.random() - 0.5) * 100;
+        }
+
+        geometry.setAttribute('position', new THREE.BufferAttribute(posArray, 3));
+
+        // Material for dots
+        const material = new THREE.PointsMaterial({
+            size: 0.7,
+            color: 0x00ffff, 
+            transparent: true,
+            opacity: 0.8,
+        });
+
+        // Material for lines
+        const lineMaterial = new THREE.LineBasicMaterial({
+            color: 0xbc13fe, 
+            transparent: true,
+            opacity: 0.3
+        });
+
+        const particlesMesh = new THREE.Points(geometry, material);
+        scene.add(particlesMesh);
+
+        // MOUSE INTERACTION
+        let mouseX = 0;
+        let mouseY = 0;
+        let targetX = 0;
+        let targetY = 0;
+
+        const windowHalfX = window.innerWidth / 2;
+        const windowHalfY = window.innerHeight / 2;
+
+        document.addEventListener('mousemove', (event) => {
+            mouseX = (event.clientX - windowHalfX);
+            mouseY = (event.clientY - windowHalfY);
+        });
+
+        // ANIMATION LOOP
+        const clock = new THREE.Clock();
+
+        const animate = () => {
+            targetX = mouseX * 0.001;
+            targetY = mouseY * 0.001;
+
+            const elapsedTime = clock.getElapsedTime();
+
+            particlesMesh.rotation.y = .1 * elapsedTime;
+            particlesMesh.rotation.x += .05 * (targetY - particlesMesh.rotation.x);
+            particlesMesh.rotation.y += .05 * (targetX - particlesMesh.rotation.y);
+
+            // Dynamic Lines Logic 
+            const lineGeometry = new THREE.BufferGeometry();
+            const linePositions = [];
+            const positions = particlesMesh.geometry.attributes.position.array;
+
+            for (let i = 0; i < particleCount; i++) {
+                const x1 = positions[i * 3];
+                const y1 = positions[i * 3 + 1];
+                const z1 = positions[i * 3 + 2];
+
+                for (let j = i + 1; j < particleCount; j++) {
+                    const x2 = positions[j * 3];
+                    const y2 = positions[j * 3 + 1];
+                    const z2 = positions[j * 3 + 2];
+
+                    const dist = Math.sqrt(Math.pow(x1 - x2, 2) + Math.pow(y1 - y2, 2) + Math.pow(z1 - z2, 2));
+
+                    if (dist < 15) {
+                        linePositions.push(x1, y1, z1);
+                        linePositions.push(x2, y2, z2);
+                    }
+                }
+            }
+
+            lineGeometry.setAttribute('position', new THREE.Float32BufferAttribute(linePositions, 3));
+            
+            const oldLines = scene.getObjectByName('networkLines');
+            if (oldLines) scene.remove(oldLines);
+
+            const lines = new THREE.LineSegments(lineGeometry, lineMaterial);
+            lines.name = 'networkLines';
+            lines.rotation.copy(particlesMesh.rotation);
+            scene.add(lines);
+
+            renderer.render(scene, camera);
+            requestAnimationFrame(animate);
+        };
+
+        animate();
+
+        // Handle Resize
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
+    };
+
+    initThreeJS();
+</script>
 
 </body>
 </html>
