--- a/prize.html
+++ b/prize.html
@@ -6,6 +6,8 @@
     <title>PRIZE POOLS | SKYWORLD LOOTS</title>
     <!-- Google Fonts for Retro Arcade Look -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Three.js Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     
     <style>
         :root {
@@ -28,11 +30,32 @@
             color: var(--text-color);
             font-family: 'Orbitron', sans-serif;
             overflow-x: hidden;
+            min-height: 100vh;
+        }
+
+        /* Background grid effect */
+        .bg-grid {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background-image: 
                 linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
                 linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
             background-size: 100% 2px, 3px 100%;
-            min-height: 100vh;
+            z-index: -1;
+        }
+
+        /* 3D Canvas Layer */
+        #canvas-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; /* Behind content */
+            opacity: 0.6; /* Subtle effect */
         }
 
         /* Scanline Effect */
@@ -53,6 +76,8 @@
             margin: 0 auto;
             padding: 20px;
             text-align: center;
+            position: relative;
+            z-index: 10; /* Keep content clickable */
         }
 
         header {
@@ -60,6 +85,8 @@
             border-bottom: 2px solid var(--neon-purple);
             padding-bottom: 20px;
             box-shadow: 0 0 15px var(--neon-purple);
+            background: rgba(5, 5, 5, 0.85);
+            padding-top: 20px;
         }
 
         h1 {
@@ -87,7 +114,7 @@
         }
 
         .nav-btn {
-            background: transparent;
+            background: rgba(0,0,0,0.8);
             border: 2px solid var(--neon-blue);
             color: var(--neon-blue);
             padding: 10px 20px;
@@ -109,6 +136,7 @@
         .active-btn {
             border-color: var(--neon-pink);
             color: var(--neon-pink);
+            box-shadow: 0 0 10px var(--neon-pink);
         }
 
         /* Prize Grid Styles */
@@ -120,18 +148,20 @@
         }
 
         .prize-item {
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: rgba(0, 0, 0, 0.8); /* Darker to read text over 3D bg */
             border: 2px solid var(--neon-purple);
             border-radius: 8px;
             padding: 15px;
             box-shadow: 0 0 15px var(--neon-purple);
             transition: transform 0.2s, box-shadow 0.2s;
             text-align: center;
+            backdrop-filter: blur(5px);
         }
 
         .prize-item:hover {
             transform: translateY(-5px);
             box-shadow: 0 0 25px var(--neon-pink);
+            background-color: rgba(0, 0, 0, 0.9);
         }
 
         .prize-rank {
@@ -172,7 +202,6 @@
             pointer-events: none;
         }
 
-        /* Fallback styling for missing images */
         .prize-image-container img[src*="placehold"] {
             object-fit: contain;
             padding: 10px;
@@ -265,7 +294,9 @@
 </head>
 <body>
 
+<div class="bg-grid"></div>
 <div class="scanlines"></div>
+<div id="canvas-container"></div>
 
 <div class="container">
     <header>
@@ -319,6 +350,7 @@
     ];
 
     document.addEventListener('DOMContentLoaded', () => {
+        // --- PRIZE GRID LOGIC ---
         const prizeGrid = document.getElementById('prize-grid');
         const modal = document.getElementById('prizeModal');
         const modalImage = document.getElementById('modalImage');
@@ -326,7 +358,7 @@
         const closeBtn = document.querySelector('.close-btn');
 
         prizeFiles.forEach((fileName, index) => {
-            const prizeNumber = index + 1; // Changed variable name for clarity
+            const prizeNumber = index + 1;
             const encodedFileName = encodeURIComponent(fileName);
             const fullPath = `Prize/${encodedFileName}`;
             const baseName = fileName.replace(/\.[^/.]+$/, "").toUpperCase();
@@ -361,7 +393,125 @@
             const container = e.target.closest('.prize-image-container');
             if (container) openModal(container.dataset.src, container.dataset.alt);
         });
+
+        // --- THREE.JS 3D BACKGROUND LOGIC ---
+        initThreeJS();
     });
+
+    // 3D Animation Function
+    function initThreeJS() {
+        const container = document.getElementById('canvas-container');
+        const scene = new THREE.Scene();
+        scene.fog = new THREE.FogExp2(0x050505, 0.002);
+
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 50;
+
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        container.appendChild(renderer.domElement);
+
+        // Particles
+        const geometry = new THREE.BufferGeometry();
+        const particleCount = 200; 
+        const posArray = new Float32Array(particleCount * 3);
+
+        for(let i = 0; i < particleCount * 3; i++) {
+            posArray[i] = (Math.random() - 0.5) * 100;
+        }
+
+        geometry.setAttribute('position', new THREE.BufferAttribute(posArray, 3));
+
+        // Material for Dots (Neon Blue)
+        const material = new THREE.PointsMaterial({
+            size: 0.7,
+            color: 0x00ffff, 
+            transparent: true,
+            opacity: 0.8,
+        });
+
+        // Material for Lines (Neon Purple)
+        const lineMaterial = new THREE.LineBasicMaterial({
+            color: 0xbc13fe, 
+            transparent: true,
+            opacity: 0.3
+        });
+
+        const particlesMesh = new THREE.Points(geometry, material);
+        scene.add(particlesMesh);
+
+        // Mouse Interaction
+        let mouseX = 0;
+        let mouseY = 0;
+        let targetX = 0;
+        let targetY = 0;
+        const windowHalfX = window.innerWidth / 2;
+        const windowHalfY = window.innerHeight / 2;
+
+        document.addEventListener('mousemove', (event) => {
+            mouseX = (event.clientX - windowHalfX);
+            mouseY = (event.clientY - windowHalfY);
+        });
+
+        // Animation Loop
+        const clock = new THREE.Clock();
+
+        const animate = () => {
+            targetX = mouseX * 0.001;
+            targetY = mouseY * 0.001;
+
+            const elapsedTime = clock.getElapsedTime();
+
+            particlesMesh.rotation.y = .1 * elapsedTime;
+            particlesMesh.rotation.x += .05 * (targetY - particlesMesh.rotation.x);
+            particlesMesh.rotation.y += .05 * (targetX - particlesMesh.rotation.y);
+
+            // Dynamic Lines
+            const lineGeometry = new THREE.BufferGeometry();
+            const linePositions = [];
+            const positions = particlesMesh.geometry.attributes.position.array;
+
+            for (let i = 0; i < particleCount; i++) {
+                const x1 = positions[i * 3];
+                const y1 = positions[i * 3 + 1];
+                const z1 = positions[i * 3 + 2];
+
+                for (let j = i + 1; j < particleCount; j++) {
+                    const x2 = positions[j * 3];
+                    const y2 = positions[j * 3 + 1];
+                    const z2 = positions[j * 3 + 2];
+
+                    const dist = Math.sqrt(Math.pow(x1 - x2, 2) + Math.pow(y1 - y2, 2) + Math.pow(z1 - z2, 2));
+
+                    if (dist < 15) {
+                        linePositions.push(x1, y1, z1);
+                        linePositions.push(x2, y2, z2);
+                    }
+                }
+            }
+
+            lineGeometry.setAttribute('position', new THREE.Float32BufferAttribute(linePositions, 3));
+            
+            const oldLines = scene.getObjectByName('networkLines');
+            if (oldLines) scene.remove(oldLines);
+
+            const lines = new THREE.LineSegments(lineGeometry, lineMaterial);
+            lines.name = 'networkLines';
+            lines.rotation.copy(particlesMesh.rotation);
+            scene.add(lines);
+
+            renderer.render(scene, camera);
+            requestAnimationFrame(animate);
+        };
+
+        animate();
+
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
+    }
 </script>
 
 </body>
