--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKYWORLD LOOTS | 2025</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Three.js Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     
     <style>
         :root {
@@ -27,10 +29,32 @@
             color: var(--text-color);
             font-family: 'Orbitron', sans-serif;
             overflow-x: hidden;
+            min-height: 100vh;
+        }
+
+        /* Background grid effect */
+        .bg-grid {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background-image: 
                 linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
                 linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
             background-size: 100% 2px, 3px 100%;
+            z-index: -1;
+        }
+
+        /* 3D Canvas Layer */
+        #canvas-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; /* Behind content */
+            opacity: 0.6;
         }
 
         /* Scanline Effect */
@@ -51,6 +75,8 @@
             margin: 0 auto;
             padding: 20px;
             text-align: center;
+            position: relative;
+            z-index: 10;
         }
 
         /* Header & Nav */
@@ -59,6 +85,8 @@
             border-bottom: 2px solid var(--neon-purple);
             padding-bottom: 20px;
             box-shadow: 0 0 15px var(--neon-purple);
+            background: rgba(5, 5, 5, 0.85); /* Semi-transparent */
+            padding-top: 20px;
         }
 
         h1 {
@@ -85,7 +113,7 @@
         }
 
         .nav-btn {
-            background: transparent;
+            background: rgba(0,0,0,0.8);
             border: 2px solid var(--neon-blue);
             color: var(--neon-blue);
             padding: 10px 20px;
@@ -109,7 +137,8 @@
             padding: 20px;
             margin: 30px 0;
             box-shadow: 0 0 10px var(--neon-pink), inset 0 0 20px rgba(255, 0, 255, 0.2);
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.7); /* See-through to show 3D effects */
+            backdrop-filter: blur(5px);
         }
 
         .itinerary-title {
@@ -146,7 +175,7 @@
         .chatbot-container {
             margin-top: 50px;
             border: 4px solid var(--terminal-green);
-            background-color: #000;
+            background-color: rgba(0, 0, 0, 0.85); /* Slightly transparent */
             padding: 2px;
             box-shadow: 0 0 20px var(--terminal-green);
             position: relative;
@@ -154,6 +183,7 @@
             margin-left: auto;
             margin-right: auto;
             border-radius: 10px;
+            backdrop-filter: blur(5px);
         }
 
         .chatbot-header {
@@ -184,14 +214,14 @@
         }
 
         .bot-msg {
-            background: transparent;
+            background: rgba(0, 50, 0, 0.5);
             border-left: 3px solid var(--terminal-green);
             align-self: flex-start;
             color: var(--terminal-green);
         }
 
         .user-msg {
-            background: transparent;
+            background: rgba(0, 0, 50, 0.5);
             border-right: 3px solid var(--neon-blue);
             color: var(--neon-blue);
             align-self: flex-end;
@@ -205,7 +235,7 @@
 
         #user-input {
             flex: 1;
-            background: #000;
+            background: rgba(0,0,0,0.5);
             border: none;
             color: var(--terminal-green);
             padding: 15px;
@@ -274,7 +304,9 @@
 </head>
 <body>
 
+<div class="bg-grid"></div>
 <div class="scanlines"></div>
+<div id="canvas-container"></div>
 
 <div class="container">
     <header>
@@ -283,7 +315,7 @@
         <div style="margin-top: 10px; color: #fff; font-size: 0.8rem;">HOSTS: JAYCE & SELINA</div>
 
         <nav>
-            <a href="#" class="nav-btn">Home</a>
+            <a href="#" class="nav-btn" style="border-color: var(--neon-pink); color: var(--neon-pink); box-shadow: 0 0 10px var(--neon-pink);">Home</a>
             <a href="scoreboard.html" class="nav-btn">Scoreboard</a>
             <a href="gamerules.html" class="nav-btn">Game Rules</a>
             <a href="themepark.html" class="nav-btn">Theme Park</a>
@@ -350,6 +382,129 @@
 <script>
 
     // =====================================================
+    // 3D NEURAL NETWORK VISUALIZATION (Three.js)
+    // =====================================================
+    const initThreeJS = () => {
+        const container = document.getElementById('canvas-container');
+        const scene = new THREE.Scene();
+        scene.fog = new THREE.FogExp2(0x050505, 0.002);
+
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 50;
+
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        container.appendChild(renderer.domElement);
+
+        // CREATE PARTICLES
+        const geometry = new THREE.BufferGeometry();
+        const particleCount = 200; 
+        const posArray = new Float32Array(particleCount * 3);
+
+        for(let i = 0; i < particleCount * 3; i++) {
+            posArray[i] = (Math.random() - 0.5) * 100;
+        }
+
+        geometry.setAttribute('position', new THREE.BufferAttribute(posArray, 3));
+
+        // Material for dots
+        const material = new THREE.PointsMaterial({
+            size: 0.7,
+            color: 0x00ffff, 
+            transparent: true,
+            opacity: 0.8,
+        });
+
+        // Material for lines
+        const lineMaterial = new THREE.LineBasicMaterial({
+            color: 0xbc13fe, 
+            transparent: true,
+            opacity: 0.3
+        });
+
+        const particlesMesh = new THREE.Points(geometry, material);
+        scene.add(particlesMesh);
+
+        // MOUSE INTERACTION
+        let mouseX = 0;
+        let mouseY = 0;
+        let targetX = 0;
+        let targetY = 0;
+
+        const windowHalfX = window.innerWidth / 2;
+        const windowHalfY = window.innerHeight / 2;
+
+        document.addEventListener('mousemove', (event) => {
+            mouseX = (event.clientX - windowHalfX);
+            mouseY = (event.clientY - windowHalfY);
+        });
+
+        // ANIMATION LOOP
+        const clock = new THREE.Clock();
+
+        const animate = () => {
+            targetX = mouseX * 0.001;
+            targetY = mouseY * 0.001;
+
+            const elapsedTime = clock.getElapsedTime();
+
+            particlesMesh.rotation.y = .1 * elapsedTime;
+            particlesMesh.rotation.x += .05 * (targetY - particlesMesh.rotation.x);
+            particlesMesh.rotation.y += .05 * (targetX - particlesMesh.rotation.y);
+
+            // Dynamic Lines Logic 
+            const lineGeometry = new THREE.BufferGeometry();
+            const linePositions = [];
+            const positions = particlesMesh.geometry.attributes.position.array;
+
+            for (let i = 0; i < particleCount; i++) {
+                const x1 = positions[i * 3];
+                const y1 = positions[i * 3 + 1];
+                const z1 = positions[i * 3 + 2];
+
+                for (let j = i + 1; j < particleCount; j++) {
+                    const x2 = positions[j * 3];
+                    const y2 = positions[j * 3 + 1];
+                    const z2 = positions[j * 3 + 2];
+
+                    const dist = Math.sqrt(Math.pow(x1 - x2, 2) + Math.pow(y1 - y2, 2) + Math.pow(z1 - z2, 2));
+
+                    if (dist < 15) {
+                        linePositions.push(x1, y1, z1);
+                        linePositions.push(x2, y2, z2);
+                    }
+                }
+            }
+
+            lineGeometry.setAttribute('position', new THREE.Float32BufferAttribute(linePositions, 3));
+            
+            const oldLines = scene.getObjectByName('networkLines');
+            if (oldLines) scene.remove(oldLines);
+
+            const lines = new THREE.LineSegments(lineGeometry, lineMaterial);
+            lines.name = 'networkLines';
+            lines.rotation.copy(particlesMesh.rotation);
+            scene.add(lines);
+
+            renderer.render(scene, camera);
+            requestAnimationFrame(animate);
+        };
+
+        animate();
+
+        // Handle Resize
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
+    };
+
+    // Initialize the 3D Background
+    initThreeJS();
+
+
+    // =====================================================
     // MULTI-API KEY SYSTEM (supports many backups)
     // =====================================================
     const API_KEYS = [
@@ -357,7 +512,7 @@
         { A: "AIzaSyDNVOG5jV1z5l", B: "1ghdAy2UFCBuxaoTLgh2Y" }, // Backup 1
         { A: "AIzaSyAflXoNsYmyjSa", B: "xomoEps2av4J5jGiPR7w" }, // Backup 2 (fill later)
         { A: "AIzaSyAp2sKOhs9R7HE", B: "aA1xHMwq--_S2aFdvf2c" }, // Backup 3 (fill later)
-        { A: "AIzaSyAO3eSo5g9fiUb", B: "dbcJsoNPGiBLNiIKX5zk" }, // Backup 4 (fill later) - FIXED COMMA
+        { A: "AIzaSyAO3eSo5g9fiUb", B: "dbcJsoNPGiBLNiIKX5zk" }, // Backup 4 (fill later)
         { A: "AIzaSyBQsnuHXoh03F", B: "OmIQX-Z79dQ8dKrdp6KTk" }  // Backup 5 (fill later)
     ];
 
