--- a/gamerules.html
+++ b/gamerules.html
@@ -229,7 +229,7 @@
         </a>
 
         <p id="status-message">
-            The PDFs will open in a new tab. Ensure the 'Rules' folder with 'Normal.pdf' and 'Rain.pdf' exists.
+            The PDFs will open in a new tab. 
         </p>
     </div>
 </div>
@@ -357,3 +357,4 @@
 
 </body>
 </html>
+
