Modify scoreboard status message for clarity
Updated the scoreboard page with a new status message indicating how to refresh the scoreboard for updates.

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -209,7 +209,7 @@
 <div class="container">
     <header>
         <h1>SCOREBOARD</h1>
-        <div class="subtitle">LIVE GOOGLE SHEET EMBED // AUTOMATIC REFRESH</div>
+        <div class="subtitle">TO UPDATE THE SCOREBOARD, YOU MAY REFRESH OR REOPEN THE LINK</div>
 
         <nav>
             <a href="index.html" class="nav-btn">Home</a>
@@ -234,7 +234,7 @@
     </div>
 
     <div id="status-message">
-        Note: This is the live embedded Google Sheet. Updates made in the sheet will reflect here automatically.
+        Note: If the scoreboard is not updated, you may update it by refreshing the page or reopen the link.
     </div>
 </div>
 
